[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/ship_cannon.tres" type="Texture" id=1]
[ext_resource path="res://scripts/Cannon.gd" type="Script" id=2]
[ext_resource path="res://scenes/CannonBall.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ActionButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/reload_fg.png" type="Texture" id=5]
[ext_resource path="res://assets/reload_bg.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0404

[sub_resource type="Animation" id=2]
resource_name = "reloading"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[node name="Cannon" type="Node2D"]
script = ExtResource( 2 )
ball_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ActionButton" parent="." instance=ExtResource( 4 )]
pause_mode = 2
visible = false
position = Vector2( 0, -35 )

[node name="ReloadIcon" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -35 )

[node name="TextureProgress" type="TextureProgress" parent="ReloadIcon"]
margin_left = -8.0
margin_top = -8.0
margin_right = 12.0
margin_bottom = 12.0
rect_scale = Vector2( 0.8, 0.8 )
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
fill_mode = 4
radial_initial_angle = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReloadIcon"]
anims/reloading = SubResource( 2 )

[node name="BallSpawn" type="Position2D" parent="."]
position = Vector2( 12.5141, -5.83993 )

[node name="Line2D" type="Line2D" parent="."]
width = 2.0
default_color = Color( 0.882353, 0.682353, 0.643137, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="hold_completed" from="ActionButton" to="." method="_on_ActionButton_hold_completed"]
[connection signal="animation_finished" from="ReloadIcon/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
